@@ -16,6 +16,6 @@ public class ProductoPrimeraNecesidadTest {
 	
 	@Test
 	public void testCalcularPrecio() {
-		assertEquals(new Double(7.2), leche.getPrecio());
+		assertEquals(Double.valueOf(7.2), leche.getPrecio());
 	}
 }
